# Healthcare-Data-Exchange

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  SUPPORT.md
.corp-harness/: component-contracts.json  site.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.harness/: policy-sync-stamp  profile.yaml
config/: eu-auth.yaml  identity-registry.yaml  opal-hardening.yaml  routing.yaml  ssraa.yaml
deploy/: docker-compose.yml
docs/: README.md  glossary.md  maintainer-github-settings.md  plan.md  product-mandate.md  references.md  roadmap.md
policy/: authz.rego  authz_test.rego
scripts/: adversarial.sh  bootstrap-opa-policy.sh  check-harness.sh  check-opal-hardening.sh  check-policy-bundle.sh  check-policy-sync.sh  check-portfolio-cross-repo.sh  check-portfolio.sh  check-stub-canary.sh  demo.sh  ensure-opa.sh  generate-opal-dev-secrets.sh  render-assets.sh  render-social-preview.sh  run-dev.sh  setup-phase3-worktrees.sh  setup-portfolio.sh  sync-policy-repo.sh  teardown-dev.sh  teardown-phase3-worktrees.sh  trigger-opal-policy-webhook.sh  upload-social-preview.sh  verify.sh
services/consent-service/: Dockerfile  pyproject.toml
services/consent-service/chex_consent/: main.py  opal_publish.py
services/consent-service/chex_consent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/consent-service/tests/: test_consent.py  test_opal_publish.py
specs/: MANDATE.md  portfolio.yaml  threat-model.yaml
web/: .gitignore  README.md  (+4 more)
(+108 files in other folders)
